--- a/requirements.txt
+++ b/requirements.txt
@@ -1,50 +1,45 @@
-absl-py==1.4.0
+absl-py==2.1.0
 astunparse==1.6.3
-blinker==1.6.2
-cachetools==5.3.1
-certifi==2023.5.7
-charset-normalizer==3.1.0
-click==8.1.3
-Flask==2.3.2
-flatbuffers==23.5.26
-Frozen-Flask==0.18
-gast==0.4.0
-google-auth==2.20.0
-google-auth-oauthlib==1.0.0
+blinker==1.8.2
+certifi==2024.2.2
+charset-normalizer==3.3.2
+click==8.1.7
+Flask==3.0.3
+flatbuffers==24.3.25
+gast==0.5.4
 google-pasta==0.2.0
-grpcio==1.54.2
-h5py==3.8.0
-idna==3.4
-itsdangerous==2.1.2
-jax==0.4.12
-Jinja2==3.1.2
-joblib==1.2.0
-keras==2.12.0
-libclang==16.0.0
-Markdown==3.4.3
-MarkupSafe==2.1.3
-ml-dtypes==0.2.0
-numpy==1.23.5
-oauthlib==3.2.2
+grpcio==1.64.0
+h5py==3.11.0
+idna==3.7
+itsdangerous==2.2.0
+Jinja2==3.1.4
+keras==3.3.3
+libclang==18.1.1
+Markdown==3.6
+markdown-it-py==3.0.0
+MarkupSafe==2.1.5
+mdurl==0.1.2
+ml-dtypes==0.3.2
+namex==0.0.8
+np_utils==0.6.0
+numpy==1.26.4
 opt-einsum==3.3.0
-packaging==23.1
-protobuf==4.23.3
-pyasn1==0.5.0
-pyasn1-modules==0.3.0
-requests==2.31.0
-requests-oauthlib==1.3.1
-rsa==4.9
-scikit-learn==1.2.2
-scipy==1.10.1
+optree==0.11.0
+packaging==24.0
+protobuf==4.25.3
+Pygments==2.18.0
+requests==2.32.2
+rich==13.7.1
+scipy==1.13.1
+setuptools==70.0.0
 six==1.16.0
-tensorboard==2.12.3
-tensorboard-data-server==0.7.1
-tensorflow==2.12.0
-tensorflow-estimator==2.12.0
-tensorflow-io-gcs-filesystem==0.32.0
-termcolor==2.3.0
-threadpoolctl==3.1.0
-typing_extensions==4.6.3
-urllib3==1.26.16
-Werkzeug==2.3.6
-wrapt==1.14.1
+tensorboard==2.16.2
+tensorboard-data-server==0.7.2
+tensorflow==2.16.1
+termcolor==2.4.0
+tf_keras==2.16.0
+typing_extensions==4.12.0
+urllib3==2.2.1
+Werkzeug==3.0.3
+wheel==0.43.0
+wrapt==1.16.0
